[gd_scene load_steps=4 format=3 uid="uid://b53icxys2o4wc"]

[ext_resource type="Script" uid="uid://c14btblbvvurj" path="res://Scenes/Assets/Item/Item.gd" id="1_lmi2p"]
[ext_resource type="Texture2D" uid="uid://g8wxylkl8tog" path="res://Resources/Graphics/Sprites/Key.png" id="2_s0r8a"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hvljq"]
height = 0.05
radius = 0.25

[node name="Item" type="Area3D"]
script = ExtResource("1_lmi2p")
itemName = "Key"

[node name="Sprite3D" type="Sprite3D" parent="."]
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("2_s0r8a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_hvljq")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="collectedSignal" from="." to="." method="_on_collected_signal"]
